fixed overflow issues

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -8,23 +8,23 @@
 .wrapper {
   position: fixed;
   top: 0;
-  /*left: -100%;*/
+  left: -100%;
   right: -100%;
   height: 100%;
   width: 100%;
   background: #000;
-  /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
-  /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
+  background: linear-gradient(90deg, #f92c78, #4114a1);
+  background: linear-gradient(375deg, #1cc7d0, #2ede98);
+  background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);
   transition: all 0.6s ease-in-out;
 }
 #active:checked ~ .wrapper {
-  /*left: 0;*/
+  left: 0;
   right: 0;
 }
 .menu-btn {
   position: absolute;
-  z-index: 2;
+  z-index: 15;
   right: 20px;
   /*left: 20px; */
   top: 20px;
@@ -60,7 +60,7 @@
 }
 
 .close {
-  z-index: 1;
+  z-index: 15;
   width: 100%;
   height: 100%;
   pointer-events: none;
@@ -87,10 +87,12 @@
   transform: translate(-50%, -50%);
   list-style: none;
   text-align: center;
+  z-index: 15;
 }
 .wrapper ul li {
   height: 10%;
   margin: 15px 0;
+  z-index: 15;
 }
 .wrapper ul li a {
   text-decoration: none;
@@ -118,7 +120,7 @@
   top: 0;
   border-radius: 50px;
   transform: scaleY(0);
-  z-index: -1;
+  z-index: 15;
   transition: transform 0.3s ease;
 }
 .wrapper ul li a:hover:after {
@@ -135,7 +137,7 @@ input[type='checkbox'] {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: -1;
+  z-index: 15;
   text-align: center;
   width: 100%;
   color: #202020;
